--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="визитка, резюме, яшина, юлия">
     <meta name="description" content="Сайт-визитка">
     <title>Сайт-резюме</title>
-    <link rel="stylesheet" href="outlines.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header class="catsville">
