--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
 	  <br>	
 	  <br>	
 	  </section>
+	  <section class="video">
+	  <br>
+	  <br>КСТАТИ, ВОТ МОЕ ЛЮБИМОЕ ВИДЕО НА YOUTUBE.COM
+	  <br><br><iframe width="560" height="315" src="https://www.youtube.com/embed/UhRXn2NRiWI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	  <br>
+	  </section>
     </main>
     <footer>
       <br><h1>со мной можно связаться:</h1>
